<resources>
    <string name="app_name">Guessing Game</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="choose_option">Choose Option</string>
    <string name="start_game">Start Game </string>
    <string name="beginner">Beginner Mode</string>
    <string name="hard">Hard Mode</string>
    <string name="player_1">Player 1</string>
    <string name="description_home">home</string>
    <string name="submit_answer">Submit answer</string>
    <string name="about_the_game">Your mission is to guess the number that is between 1 and 100</string>
    <string name="empty" />
    <string name="your_answer">Enter your answer</string>
</resources>