<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/enter_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textColor="@color/light_purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <EditText
        android:id="@+id/playerNameInputET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:autofillHints="Player 1"
        android:ems="10"
        android:hint="@string/player_1"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/choose_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="48dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/choose_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_option"
        android:textColor="@color/light_purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_name"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="212dp"
        android:layout_height="102dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/beginnerR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginner"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/hardR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.255" />

</androidx.constraintlayout.widget.ConstraintLayout>